# px4

./: .gitignore  MULAKAT_NOTLARI.md  README.md
ros2_ws/src/px4_offboard_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/px4_offboard_demo/config/: pid_circle.yaml  pid_hover.yaml  waypoints_demo.yaml  zigzag.yaml
ros2_ws/src/px4_offboard_demo/launch/: offboard_demo.launch.py  offboard_with_mavros.launch.py  pid_mission.launch.py  viz.launch.py
ros2_ws/src/px4_offboard_demo/px4_offboard_demo/: controller_pid.py  offboard_control.py
ros2_ws/src/px4_offboard_demo/resource/: px4_offboard_demo
ros2_ws/src/px4_offboard_demo/rviz/: offboard_view.rviz
scripts/: build_ros2_ws.sh  check_ros2_humble.sh  get_px4.sh  run_px4_sitl.sh  tmux_up.sh
